--- a/Hotel/Hotel/Views/Home/Index.cshtml
+++ b/Hotel/Hotel/Views/Home/Index.cshtml
@@ -212,7 +212,7 @@
 							<p>@item.Description</p>
 							<div class="price">Price <span>$@item.Price</span>/per night</div>
 						</div>
-						<a class="theme-btn style-two" href="contact.html">Book Now <i class="fal fa-angle-right"></i></a>
+						<a class="theme-btn style-two"asp-action="Details" asp-route-id="@item.Id">Details <i class="fal fa-angle-right"></i></a>
 					</div>
 				</div>
 			}
