--- a/Hotel/Hotel/Views/_ViewImports.cshtml
+++ b/Hotel/Hotel/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Hotel
 @using Hotel.ViewModels
+@using Hotel.ViewModels.RoomDetail
 @namespace Hotel.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
