--- a/Hotel/Hotel/Views/Room/Details.cshtml
+++ b/Hotel/Hotel/Views/Room/Details.cshtml
@@ -12,14 +12,14 @@
                     <ul class="blog-meta wow fadeInUp delay-0-3s">
                         <li>
                             <i class="far fa-bed-alt"></i>
-                            <a href="#">Beds : @Model.Beds</a>
+                            <a href="#">Beds: @Model.Beds</a>
                         </li>
                         <li>
                             <i class="far fa-bath"></i>
-                            <a href="#">Bathrooms : @Model.Bathrooms</a>
+                            <a href="#">Bathrooms: @Model.Bathrooms</a>
                         </li>
                         <li>
-                            <div class="ratting">
+                            <div class="rating">
                                 @for (int i = 0; i < Model.Rating; i++)
                                 {
                                     <i class="fas fa-star"></i>
@@ -29,6 +29,16 @@
                     </ul>
                     <div class="price mb-35">$ @Model.Price</div>
                     <p>@Model.Description</p>
+                    <div class="mt-4">
+                        <h3>Room Status</h3>
+                        <div class="p-3 rounded bg-dark">
+                            <span style="color:orange; font-size:1.7rem; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif" >@Model.RoomStatus.StatusName</span>
+                        </div>
+                    </div>
+
+
+
+
                     <div class="room-details-images mt-45 wow fadeInUp delay-0-2s">
                         @foreach (var img in Model.Images)
                         {
@@ -38,7 +48,7 @@
                     <div class="section-title mt-35">
                         <h2>Room Facilities</h2>
                     </div>
-                    <p>Aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia</p>
+                    <p>Description of room facilities goes here.</p>
                     <ul class="list-style-two three-column pt-10 wow fadeInUp delay-0-2s">
                         <li>Breakfast Included</li>
                         <li>Flat Screen TV</li>
@@ -53,11 +63,6 @@
                         <li>Saving Safe</li>
                         <li>Transportations</li>
                     </ul>
-                    <div class="section-title my-40">
-                        <h2>Availability</h2>
-                    </div>
-
-                    <div class="room-calendar wow fadeInUp delay-0-2s" id="calendar"></div>
 
                     <div class="room-location mt-70 wow fadeInUp delay-0-2s">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m12!1m10!1m3!1d142190.2862584524!2d-74.01298319978558!3d40.721725351435126!2m1!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sbd!4v1663473911885!5m2!1sen!2sbd" style="border:0; width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -65,56 +70,28 @@
                     <div class="section-title mt-45">
                         <h2>Rules & Regulations</h2>
                     </div>
-                    <p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage avoids a pain that produces no resultant pleasure</p>
+                    <p>Description of rules and regulations goes here.</p>
                     <ul class="list-style-two pt-10 wow fadeInUp delay-0-2s">
                         <li>Check-in: After 02:00pm</li>
                         <li>Checkout: Before 11:00am</li>
                         <li>Late Checkout: Additional charge 50% of the room rate.</li>
                         <li>No smoking inside the room</li>
                         <li>No pets</li>
-                        <li>Identification document is must for hotel registration.</li>
+                        <li>Identification document is required for hotel registration.</li>
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-5">
-                <div class="room-details-sidebar bgc-lighter p-50 rp-40">
-                    <form class="widget-search-filter wow fadeInUp delay-0-4s">
-                        <div class="form-group">
-                            <label for="checkin">Check In</label>
-                            <input type="date" id="checkin" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="checkout">Check Out</label>
-                            <input type="date" id="checkout" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="adults">Adults</label>
-                            <select name="adults" id="adults">
-                                <option value="adults1">1</option>
-                                <option value="adults2">2</option>
-                                <option value="adults3" selected>3</option>
-                                <option value="adults3">4</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="children">Children</label>
-                            <select name="children" id="children">
-                                <option value="children1">1</option>
-                                <option value="children2" selected>2</option>
-                                <option value="children3">3</option>
-                            </select>
-                        </div>
-                        <button class="theme-btn w-100">Check Availability <i class="far fa-angle-right"></i></button>
-                    </form>
-                </div>
+            <div class="mt-20">
+                @if (Model.RoomStatus != null && Model.RoomStatus.StatusName != null && Model.RoomStatus.StatusName.Contains("Available", StringComparison.OrdinalIgnoreCase))
+                {
+                    <a class="theme-btn w-100" asp-action="Index" asp-controller="Booking">Book Now</a>
+                }
+                else
+                {
+                    <a class="theme-btn w-100" asp-action="Index" asp-controller="Room">Search</a>
+                }
             </div>
+
         </div>
     </div>
-    <div class="bg-lines for-bg-white">
-        <span></span><span></span>
-        <span></span><span></span>
-        <span></span><span></span>
-        <span></span><span></span>
-    </div>
 </section>
-<!-- Room Details Area end -->
