login and search funct improved

--- a/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -9,17 +9,17 @@
 	<meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
 	<meta content="Themesbrand" name="author" />
 	<!-- App favicon -->
-	<link rel="shortcut icon" href="~/admin/assets1/images/favicon.ico">
+	<link rel="shortcut icon" href="~/admin/assets/images/favicon.ico">
 
 	<!-- preloader css -->
-	<link rel="stylesheet" href="~/admin/assets1/css/preloader.min.css" type="text/css" />
+	<link rel="stylesheet" href="~/admin/assets/css/preloader.min.css" type="text/css" />
 
 	<!-- Bootstrap Css -->
-	<link href="~/admin/assets1/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
+	<link href="~/admin/assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
 	<!-- Icons Css -->
-	<link href="~/admin/assets1/css/icons.min.css" rel="stylesheet" type="text/css" />
+	<link href="~/admin/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
 	<!-- App Css-->
-	<link href="~/admin/assets1/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+	<link href="~/admin/assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
 	@await RenderSectionAsync("styles", false)
 </head>
 
@@ -37,19 +37,19 @@
                     <div class="navbar-brand-box">
                         <a href="index.html" class="logo logo-dark">
                             <span class="logo-sm">
-                                <img src="~/admin/assets1/images/logo-sm.svg" alt="" height="24">
+                                <img src="~/admin/assets/images/logo-sm.svg" alt="" height="24">
                             </span>
                             <span class="logo-lg">
-                                <img src="~/admin/assets1/images/logo-sm.svg" alt="" height="24"> <span class="logo-txt">Minia</span>
+                                <img src="~/admin/assets/images/logo-sm.svg" alt="" height="24"> <span class="logo-txt">Minia</span>
                             </span>
                         </a>
 
                         <a href="index.html" class="logo logo-light">
                             <span class="logo-sm">
-                                <img src="~/admin/assets1/images/logo-sm.svg" alt="" height="24">
+                                <img src="~/admin/assets/images/logo-sm.svg" alt="" height="24">
                             </span>
                             <span class="logo-lg">
-                                <img src="~/admin/assets1/images/logo-sm.svg" alt="" height="24"> <span class="logo-txt">Minia</span>
+                                <img src="~/admin/assets/images/logo-sm.svg" alt="" height="24"> <span class="logo-txt">Minia</span>
                             </span>
                         </a>
                     </div>
@@ -151,7 +151,7 @@
                                 <a href="#!" class="text-reset notification-item">
                                     <div class="d-flex">
                                         <div class="flex-shrink-0 me-3">
-                                            <img src="~/admin/assets1/images/users/avatar-6.jpg" class="rounded-circle avatar-sm" alt="user-pic">
+                                            <img src="~/admin/assets/images/users/avatar-6.jpg" class="rounded-circle avatar-sm" alt="user-pic">
                                         </div>
                                         <div class="flex-grow-1">
                                             <h6 class="mb-1">Salena Layfield</h6>
@@ -461,16 +461,16 @@
         
 
 		<!-- JAVASCRIPT -->
-		<script src="~/admin/assets1/libs/jquery/jquery.min.js"></script>
-		<script src="~/admin/assets1/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-		<script src="~/admin/assets1/libs/metismenu/metisMenu.min.js"></script>
-		<script src="~/admin/assets1/libs/simplebar/simplebar.min.js"></script>
-		<script src="~/admin/assets1/libs/node-waves/waves.min.js"></script>
-		<script src="~/admin/assets1/libs/feather-icons/feather.min.js"></script>
+		<script src="~/admin/assets/libs/jquery/jquery.min.js"></script>
+		<script src="~/admin/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script src="~/admin/assets/libs/metismenu/metisMenu.min.js"></script>
+		<script src="~/admin/assets/libs/simplebar/simplebar.min.js"></script>
+		<script src="~/admin/assets/libs/node-waves/waves.min.js"></script>
+		<script src="~/admin/assets/libs/feather-icons/feather.min.js"></script>
 		<!-- pace js -->
-		<script src="~/admin/assets1/libs/pace-js/pace.min.js"></script>
+		<script src="~/admin/assets/libs/pace-js/pace.min.js"></script>
 
-		<script src="~/admin/assets1/js/app.js"></script>
+		<script src="~/admin/assets/js/app.js"></script>
 		<script>
 			$(document).ready(function () {
 				toastr.options = {
