--- a/Hotel/Hotel/Views/Home/Details.cshtml
+++ b/Hotel/Hotel/Views/Home/Details.cshtml
@@ -33,7 +33,7 @@
                     <div class="room-details-images mt-45 wow fadeInUp delay-0-2s">
                         @foreach (var img in Model.Room.Images)
                         {
-                            <img src="@Url.Content("~/assets/imgs/" + img.Url)" alt="Room Details">
+                            <img src="@Url.Content("~/~/admin/assets/imgs/" + img.Url)" alt="Room Details">
                         }
                     </div>
                     <div class="section-title mt-35">
