forgot password and reset password

--- a/Hotel/Hotel/Views/Shared/Components/Header/Default.cshtml
+++ b/Hotel/Hotel/Views/Shared/Components/Header/Default.cshtml
@@ -78,16 +78,15 @@
 
                     <!-- Menu Button -->
                     <div class="menu-btns">
-                        <a href="contact.html" class="theme-btn">Book Now <i class="far fa-angle-right"></i></a>
 
                         <button class="shopping-bag">
-                            <i class="fal fa-shopping-bag"></i>
                             <span>0</span>
                         </button>
                         <!-- menu sidbar -->
                         <div class="menu-sidebar">
                             <button>
-                                <img src="~/assets/images/icons/sidebar-toggler.png" alt="Toggler">
+                                <i class="fal fa-shopping-bag" style="color:white"></i>
+
                             </button>
                         </div>
                     </div>
