--- a/Hotel/Hotel/Views/Account/Login.cshtml
+++ b/Hotel/Hotel/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Login | Minia - Minimal Admin & Dashboard Template</title>
+    <title>Caspian Horizon </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
     <meta content="Themesbrand" name="author" />
@@ -35,7 +35,6 @@
                                 <div class="auth-content my-auto">
                                     <div class="text-center">
                                         <h5 class="mb-0">Welcome Back!</h5>
-                                        <p class="text-muted mt-2">Sign in to continue to Minia.</p>
                                     </div>
                                     <form method="post" class="mt-4 pt-2">
                                         <div class="mb-3">
@@ -50,7 +49,7 @@
                                                 </div>
                                                 <div class="flex-shrink-0">
                                                     <div class="">
-                                                        <a href="auth-recoverpw.html" class="text-muted">Forgot password?</a>
+                                                        <a asp-action="ForgotPassword" class="text-muted">Forgot password?</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -74,7 +73,7 @@
                                             <button type="submit" class="btn btn-primary w-100 waves-effect waves-light">Log In</button>
                                         </div>
                                     </form>
-                                    <div class="mt-4 pt-2 text-center">
+                                    @* <div class="mt-4 pt-2 text-center">
                                         <div class="signin-other-title">
                                             <h5 class="font-size-14 mb-3 text-muted fw-medium">- Sign in with -</h5>
                                         </div>
@@ -95,15 +94,12 @@
                                                 </a>
                                             </li>
                                         </ul>
-                                    </div>
+                                    </div> *@
                                     <div class="mt-5 text-center">
                                         <p class="text-muted mb-0">
-                                            Don't have an account? <a href="auth-register.html" class="text-primary fw-semibold">Sign up now</a>
+                                            Don't have an account? <a asp-action="Register" class="text-primary fw-semibold">Sign up now</a>
                                         </p>
                                     </div>
-                                </div>
-                                <div class="mt-4 mt-md-5 text-center">
-                                    <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Minia . Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
                                 </div>
                             </div>
                         </div>
@@ -140,19 +136,7 @@
                                                     <h4 class="mt-4 fw-medium lh-base text-white">
                                                         “I feel confident imposing change on myself. It's a lot more progressing fun than looking back. That's why I ultricies enim at malesuada nibh diam on tortor neaded to throw curve balls.”
                                                     </h4>
-                                                    <div class="mt-4 pt-3 pb-5">
-                                                        <div class="d-flex align-items-start">
-                                                            <div class="flex-shrink-0">
-                                                                <img src="~/admin/assets/images/users/avatar-1.jpg" class="avatar-md img-fluid rounded-circle" alt="...">
-                                                            </div>
-                                                            <div class="flex-grow-1 ms-3 mb-4">
-                                                                <h5 class="font-size-18 text-white">
-                                                                    Richard Drews
-                                                                </h5>
-                                                                <p class="mb-0 text-white-50">Web Designer</p>
-                                                            </div>
-                                                        </div>
-                                                    </div>
+                                                    
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
