--- a/Hotel/Hotel/Areas/Admin/Views/Room/Create.cshtml
+++ b/Hotel/Hotel/Areas/Admin/Views/Room/Create.cshtml
@@ -24,6 +24,11 @@
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <div class="form-group" style="margin-top: 1%;">
+            <label asp-for="Location" class="control-label"></label>
+            <textarea asp-for="Location" class="form-control"></textarea>
+            <span asp-validation-for="Location" class="text-danger"></span>
+        </div>
+        <div class="form-group" style="margin-top: 1%;">
             <label asp-for="Price" class="control-label"></label>
             <input asp-for="Price" class="form-control" />
             <span asp-validation-for="Price" class="text-danger"></span>
