--- a/Hotel/Hotel/Views/_ViewImports.cshtml
+++ b/Hotel/Hotel/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Hotel
 @using Hotel.ViewModels
 @using Hotel.ViewModels.RoomDetail
+@using Hotel.ViewModels.Reservation
+
 @namespace Hotel.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
